crates/ty_python_semantic/resources/mdtest/snapshots/variables.md_-_Legacy_type_variable…_-_Type_variables_-_Invalid_defaults_-_Concrete_default_wit…_(37f9b6583c0633f5).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: variables.md - Legacy type variables - Type variables - Invalid defaults - Concrete default with a bound
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/variables.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | # error: [invalid-type-variable-default] "Default type `int` is not assignable to bound `str`"
4 | T = TypeVar("T", bound=str, default=int)
5 | 
6 | S = TypeVar("S", bound=float, default=int)
```

# Diagnostics

```
error[invalid-type-variable-default]: Default type `int` is not assignable to bound `str`
 --> src/mdtest_snippet.py:4:37
  |
3 | # error: [invalid-type-variable-default] "Default type `int` is not assignable to bound `str`"
4 | T = TypeVar("T", bound=str, default=int)
  |                                     ^^^
5 |
6 | S = TypeVar("S", bound=float, default=int)
  |
info: rule `invalid-type-variable-default` is enabled by default

```
